--- a/index.html
+++ b/index.html
@@ -59,18 +59,19 @@
                </div>
     </section>
     
-<section class="forth">
-    <h3>What Client are say</h3>
-     <br>
-     <h5>Bruce Moccy</h5>
-     <p><span>Founder & CEO Alies</span></p>
-     <br>
-     <br>
-     <p>"Lorem Ipsum is simply dummy <br>text of the printing and typesetting industry.Lorem Ipsum"</p>
-     <div class="other">
-        <a target="_blank" href="https://www.programming-hero.com/"><span>Leave me a message in the</span><span class="ogg">Programming.hero1@gmail.com</span> </a>
-     </div>
-</section>
+    <section class="fourth-banner">   
+        <div class="middle">
+            <h3>What client are say</h3>
+            <h5>Bruce Moccy</h5>
+            <h6>Founder & CEO Alies</h6>
+            <p>"Lorem Ipsum is simply dummy text of</p>
+            <p>printing and typesetting industry.Lorem Ipsum is simply dummy"</p>
+        </div>
+        <div class="forth">
+            <h6>Leave me a message in the</h6> 
+            <p>programming.hero1@gmail.com</p>
+        </div>
+    </section>
 <section class="form">
     <form>
     <h2>Login below for learn more!!!</h2>
