--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                </div>
     </section>
     
-    <section class="fourth-banner">   
+    <section class="last">   
         <div class="middle">
             <h3>What client are say</h3>
             <h5>Bruce Moccy</h5>
@@ -67,7 +67,7 @@
             <p>"Lorem Ipsum is simply dummy text of</p>
             <p>printing and typesetting industry.Lorem Ipsum is simply dummy"</p>
         </div>
-        <div class="forth">
+        <div class="last-one">
             <h6>Leave me a message in the</h6> 
             <p>programming.hero1@gmail.com</p>
         </div>
